--- a/templates/user.hbs
+++ b/templates/user.hbs
@@ -324,20 +324,24 @@
 </div>
 
 
-    <!-- Full nav (desktop only) -->
-    <div class="collapse navbar-collapse d-none d-lg-flex justify-content-center">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="/user">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/shop">Shop</a></li>
-        <li class="nav-item"><a class="nav-link" href="/gaming">Booking</a></li>
-        <li class="nav-item"><a class="nav-link" href="/loans">Loans</a></li>
-        <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
-        <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
-        <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li>
-        <li class="nav-item"><a class="nav-link text-danger" href="/home">Logout</a></li>
-      </ul>
-    </div>
+<!-- ======= Desktop Navigation ======= -->
+<div class="collapse navbar-collapse d-none d-lg-flex justify-content-center">
+  <ul class="navbar-nav align-items-center">
+    <li class="nav-item"><a class="nav-link px-3" href="/user">Home</a></li>
+    <li class="nav-item"><a class="nav-link px-3" href="/shop">Shop</a></li>
+    <li class="nav-item"><a class="nav-link px-3" href="/gaming">Booking</a></li>
+    <li class="nav-item"><a class="nav-link px-3" href="/loans">Loans</a></li>
+    <li class="nav-item"><a class="nav-link px-3" href="/contact">Contact</a></li>
+    <li class="nav-item"><a class="nav-link px-3" href="/profile">Profile</a></li>
+    <li class="nav-item"><a class="nav-link px-3" href="/about">About</a></li>
+    <li class="nav-item"><a class="nav-link px-3" href="/blog">Blog</a></li>
+    <li class="nav-item">
+      <a class="nav-link text-danger fw-semibold px-3" href="/">
+        <i class="bi bi-box-arrow-right me-1"></i> Logout
+      </a>
+    </li>
+  </ul>
+</div>
 
   </div>
 </nav>
@@ -350,20 +354,24 @@
     </h5>
     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
-  <div class="offcanvas-body d-flex flex-column">
-    <ul class="navbar-nav flex-grow-1">
-      <li class="nav-item"><a class="nav-link text-white" href="/">Home</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="/shop">Shop</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="/gaming">Booking</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="/loans">Loans</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="/contact">Contact</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="/profile">Profile</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="/about">About</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="/blog">Blog</a></li>
-    </ul>
-    <a href="/home" class="btn btn-danger mt-auto">Logout</a>
-  </div>
+<div class="offcanvas-body d-flex flex-column bg-dark">
+  <ul class="navbar-nav flex-grow-1">
+    <li class="nav-item"><a class="nav-link text-white" href="/user">Home</a></li>
+    <li class="nav-item"><a class="nav-link text-white" href="/shop">Shop</a></li>
+    <li class="nav-item"><a class="nav-link text-white" href="/gaming">Booking</a></li>
+    <li class="nav-item"><a class="nav-link text-white" href="/loans">Loans</a></li>
+    <li class="nav-item"><a class="nav-link text-white" href="/contact">Contact</a></li>
+    <li class="nav-item"><a class="nav-link text-white" href="/profile">Profile</a></li>
+    <li class="nav-item"><a class="nav-link text-white" href="/about">About</a></li>
+    <li class="nav-item"><a class="nav-link text-white" href="/blog">Blog</a></li>
+  </ul>
+
+  <!-- Logout Button -->
+  <a href="/" class="btn btn-danger mt-auto d-flex align-items-center justify-content-center gap-2">
+    <i class="bi bi-box-arrow-right"></i> Logout
+  </a>
 </div>
+
 
   
   <!-- Top Bar Messages -->
