--- a/templates/admin.hbs
+++ b/templates/admin.hbs
@@ -161,7 +161,7 @@
       <li><a href="#messages-tab" class="nav-link" data-bs-toggle="tab"><i class="bi bi-chat-dots"></i> <span>Messages</span></a></li>
     </ul>
     <hr />
-    <a href="/" class="btn btn-sm btn-danger w-100"><i class="bi bi-box-arrow-right"></i> <span>Logout</span></a>
+    <a href="/home" class="btn btn-sm btn-danger w-100"><i class="bi bi-box-arrow-right"></i> <span>Logout</span></a>
   </div>
 
   <!-- Main Content -->
