--- a/templates/admin.hbs
+++ b/templates/admin.hbs
@@ -148,21 +148,25 @@
     <i class="bi bi-list"></i>
   </button>
 
-  <!-- Sidebar -->
-  <div class="sidebar d-flex flex-column p-3" id="sidebar">
-    <h4 class="text-white mb-4">⚙️ Admin Panel</h4>
-    <ul class="nav nav-pills flex-column mb-auto">
-      <li><a href="#users" class="nav-link active" data-bs-toggle="tab"><i class="bi bi-people"></i> <span>Users</span></a></li>
-      <li><a href="#products" class="nav-link" data-bs-toggle="tab"><i class="bi bi-box-seam"></i> <span>Products</span></a></li>
-      <li><a href="#loans" class="nav-link" data-bs-toggle="tab"><i class="bi bi-cash-stack"></i> <span>Loans</span></a></li>
-      <li><a href="#content" class="nav-link" data-bs-toggle="tab"><i class="bi bi-layout-text-sidebar"></i> <span>Banner-Content</span></a></li>
-      <li><a href="#leaderboard" class="nav-link" data-bs-toggle="tab"><i class="bi bi-trophy"></i> <span>Leaderboard</span></a></li>
-      <li><a href="#bookings" class="nav-link" data-bs-toggle="tab"><i class="bi bi-calendar-check"></i> <span>Bookings</span></a></li>
-      <li><a href="#messages-tab" class="nav-link" data-bs-toggle="tab"><i class="bi bi-chat-dots"></i> <span>Messages</span></a></li>
-    </ul>
-    <hr />
-    <a href="/home" class="btn btn-sm btn-danger w-100"><i class="bi bi-box-arrow-right"></i> <span>Logout</span></a>
-  </div>
+<!-- Sidebar -->
+<div class="sidebar d-flex flex-column p-3" id="sidebar">
+  <h4 class="text-white mb-4">⚙️ Admin Panel</h4>
+  <ul class="nav nav-pills flex-column mb-auto">
+    <li><a href="#users" class="nav-link active" data-bs-toggle="tab"><i class="bi bi-people"></i> <span>Users</span></a></li>
+    <li><a href="#products" class="nav-link" data-bs-toggle="tab"><i class="bi bi-box-seam"></i> <span>Products</span></a></li>
+    <li><a href="#loans" class="nav-link" data-bs-toggle="tab"><i class="bi bi-cash-stack"></i> <span>Loans</span></a></li>
+    <li><a href="#content" class="nav-link" data-bs-toggle="tab"><i class="bi bi-layout-text-sidebar"></i> <span>Banner-Content</span></a></li>
+    <li><a href="#leaderboard" class="nav-link" data-bs-toggle="tab"><i class="bi bi-trophy"></i> <span>Leaderboard</span></a></li>
+    <li><a href="#bookings" class="nav-link" data-bs-toggle="tab"><i class="bi bi-calendar-check"></i> <span>Bookings</span></a></li>
+    <li><a href="#messages-tab" class="nav-link" data-bs-toggle="tab"><i class="bi bi-chat-dots"></i> <span>Messages</span></a></li>
+  </ul>
+  <hr />
+  <!-- Logout -->
+  <a href="/logout" class="btn btn-sm btn-danger w-100">
+    <i class="bi bi-box-arrow-right"></i> <span>Logout</span>
+  </a>
+</div>
+
 
   <!-- Main Content -->
   <div class="content" id="mainContent">
