--- a/templates/user.hbs
+++ b/templates/user.hbs
@@ -370,12 +370,13 @@
     </ul>
 
     <!-- Logout Button -->
-    <a href="/home" 
+    <a href="/logout" 
        class="btn btn-danger mt-auto d-flex align-items-center justify-content-center gap-2">
       <i class="bi bi-box-arrow-right"></i> Logout
     </a>
   </div>
 </div>
+
 
   
   <!-- Top Bar Messages -->
